# rocprofiler-systems

./: .gitmodules  .pre-commit-config.yaml  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: ci-matrix.yml  pull_request_template.md
cmake/: ConfigCPack.cmake  DyninstBoost.cmake  DyninstElfUtils.cmake  DyninstExternals.cmake  DyninstLibIberty.cmake  DyninstTBB.cmake  GTest.cmake  MacroUtilities.cmake  NlohmannJson.cmake  PAPI.cmake  Packages.cmake  SQLite3.cmake  Spdlog.cmake
docker/: Dockerfile.opensuse  Dockerfile.opensuse.ci  Dockerfile.rhel  Dockerfile.rhel.ci  Dockerfile.ubuntu  Dockerfile.ubuntu.ci  build-docker-ci.sh  build-docker.sh  containers-ci.yml  containers.yml
docs/: index.rst
examples/: CMakeLists.txt  causal-helpers.cmake
examples/causal/: causal.cpp
examples/code-coverage/: CMakeLists.txt  code-coverage.cpp  code-coverage.py
examples/fork/: CMakeLists.txt  fork.cpp  hipMallocConcurrencyMproc.cpp
examples/jpegdecode/: CMakeLists.txt  jpegdecodeperf.cpp  rocjpeg_samples_utils.h
examples/lulesh/: CMakeLists.txt
examples/mpi/: CMakeLists.txt  intervals_mpi.f90
examples/openmp/: CMakeLists.txt
examples/parallel-overhead/: CMakeLists.txt  parallel-overhead.cpp
examples/python/: CMakeLists.txt  builtin.py  external.py  fill.py  noprofile.py  source-numpy.py  source.py
examples/rccl/: CMakeLists.txt
examples/rccl/rccl-tests/src/: Makefile  all_gather.cpp  all_reduce.cpp  alltoall.cpp  alltoallv.cpp  broadcast.cpp  common.cpp  common.h  gather.cpp  git_version.h  rccl_compat.h  reduce.cpp  reduce_scatter.cpp  scatter.cpp  sendrecv.cpp  timer.cc  timer.h
examples/rccl/rccl-tests/verifiable/: verifiable.cpp  verifiable.h  verifiable.mk
examples/rewrite-caller/: CMakeLists.txt  rewrite-caller.cpp
examples/roctx/: CMakeLists.txt
examples/thread-limit/: CMakeLists.txt  thread-limit.cpp
examples/trace-time-window/: CMakeLists.txt  trace-time-window.cpp
examples/transferBench/: AllToAll.cpp  CMakeLists.txt  TransferBench.hpp
examples/transpose/: CMakeLists.txt
examples/user-api/: CMakeLists.txt  user-api.cpp
examples/videodecode/: CMakeLists.txt  roc_video_dec.h  video_demuxer.h  videodecodebatch.cpp
scripts/: build-release.sh  (+2 more)
source/lib/core/: CMakeLists.txt  agent.hpp  agent_manager.cpp  agent_manager.hpp  amd_smi.cpp  amd_smi.hpp  argparse.cpp  argparse.hpp  categories.cpp  categories.hpp  config.cpp  config.hpp  constraint.cpp  cpu.cpp  cpu.hpp  debug.hpp  defines.hpp  dynamic_library.cpp  dynamic_library.hpp  exception.cpp  exception.hpp  gpu.cpp  gpu.hpp  gpu_metrics.cpp  gpu_metrics.hpp  mpi.hpp  mproc.cpp  node_info.cpp  node_info.hpp  perf.cpp  perfetto.cpp  perfetto.hpp  rocprofiler-sdk.cpp  rocprofiler-sdk.hpp  state.cpp  timemory.hpp  utility.cpp
source/lib/core/benchmark/: benchmark.hpp  category.hpp
source/lib/core/binary/: address_range.cpp  address_range.hpp
source/lib/core/components/: fwd.hpp
source/lib/core/containers/: aligned_static_vector.hpp  static_vector.hpp
source/lib/core/rocpd/: CMakeLists.txt  data_processor.cpp  data_processor.hpp  json.cpp  json.hpp
source/lib/core/rocpd/data_storage/: CMakeLists.txt  database.cpp  database.hpp  insert_query_builders.hpp  table_insert_query.hpp
source/lib/core/rocpd/data_storage/queries/: table_insert_query.hpp
source/lib/core/rocpd/data_storage/queries/query_builders/: insert_query_builders.hpp
source/lib/core/rocpd/data_storage/schema/: data_views.sql  marker_views.sql  rocpd_indexes.sql  rocpd_tables.sql  rocpd_views.sql  summary_views.sql
source/lib/core/trace_cache/: CMakeLists.txt  buffer_storage.cpp  buffer_storage.hpp  cache_manager.cpp  cache_manager.hpp  cache_type_traits.hpp  cache_utility.hpp  cacheable.hpp  metadata_registry.cpp  metadata_registry.hpp  perfetto_processor.cpp  perfetto_processor.hpp  rocpd_post_processing.cpp  rocpd_post_processing.hpp  rocpd_processor.cpp  rocpd_processor.hpp  sample_processor.hpp  sample_type.hpp  storage_parser.cpp  storage_parser.hpp  type_registry.hpp
source/lib/core/trace_cache/tests/: CMakeLists.txt  mocked_types.hpp  test_buffer_storage.cpp  test_cache_integration.cpp  test_cacheable.cpp  test_flush_worker.cpp  test_sample_type.cpp  test_storage_parser.cpp  test_type_registry.cpp
source/lib/logger/: CMakeLists.txt  debug.hpp  logger.hpp
source/lib/logger/tests/: CMakeLists.txt  test_logger.cpp
source/lib/rocprof-sys-rt/: CMakeLists.txt
source/lib/rocprof-sys-rt/cmake/: platform.cmake
source/lib/rocprof-sys-rt/src/: RTsigill-x86.S  RTsignal-x86.S  RTspace-smallmem.s  RTspace.S  RTtlsgetaddr-x86.S  RTtlsgetaddr-x86_64.S
tests/: CMakeLists.txt  generate_papi_nic_events.sh  get_default_nic.sh  rocprof-sys-annotate-tests.cmake  rocprof-sys-binary-tests.cmake  rocprof-sys-causal-tests.cmake  rocprof-sys-code-coverage-tests.cmake  rocprof-sys-config-tests.cmake  rocprof-sys-decode-tests.cmake  rocprof-sys-fork-tests.cmake  rocprof-sys-gpu-connect-tests.cmake  rocprof-sys-instrument-tests.cmake  rocprof-sys-mpi-tests.cmake  rocprof-sys-nic-perf.cmake  rocprof-sys-openmp-tests.cmake  rocprof-sys-overflow-tests.cmake  rocprof-sys-pthread-tests.cmake  rocprof-sys-python-tests.cmake  rocprof-sys-rocm-hip-stream.cmake  rocprof-sys-rocm-tests.cmake  rocprof-sys-roctx-tests.cmake  rocprof-sys-testing.cmake  rocprof-sys-thread-limit-tests.cmake  rocprof-sys-ucx-tests.cmake  rocprof-sys-unit-tests.cmake  validate-causal-json.py  validate-perfetto-proto.py  validate-rocpd.py
tests/rocpd-validation-rules/: default-rules.json
tests/rocpd-validation-rules/gpu-connect/: amd-smi-rules.json  validation-rules.json
tests/rocpd-validation-rules/jpeg-decode/: amd-smi-rules.json  validation-rules.json
tests/rocpd-validation-rules/python/: python-builtin-rules.json  python-source-rules.json
tests/rocpd-validation-rules/roctx/: amd-smi-rules.json  sdk-metrics-rules.json  validation-rules.json
tests/rocpd-validation-rules/transpose/: validation-rules.json
tests/rocpd-validation-rules/video-decode/: amd-smi-rules.json
tests/source/: CMakeLists.txt
(+54 files in other folders)
